fix catalog layout bugs (#3018)

--- a/src/renderer/components/+catalog/catalog.module.css
+++ b/src/renderer/components/+catalog/catalog.module.css
@@ -23,6 +23,10 @@
   max-width: 40px;
   display: flex;
   align-items: center;
+
+  .MuiAvatar-root {
+    font-size: var(--unit);
+  }
 }
 
 .nameCell {
